--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,69 @@
 <h1>Eat Da Burger!</h1>
+<br>
 
-<ul>
+<div id = 'burgersList'>
+    <h2> Burgers waiting to be devoured!</h2>
+    <hr>
+    <ul>
+        {{#each burgers}}
+            {{#unless this.devoured}}
+            <li>
+                {{this.id}}.{{this.burger_name}}
+                <form action="/{{this.id}}?_method=PUT" method="POST">
+                    {{!-- <input type="hidden" name="devoured" value="false"> --}}
+                    <button class="btn btn-warning devourBtn" type="submit">Devour it!</button>
+                </form>
+            </li>
+            {{/unless}}
+        {{/each}}
+    </ul>
+</div>
+
+ {{!-- <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
+ <button type="button" class="eatburger btn btn-warning" id ="eatbutton" data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-cutlery"></span></button>
+ <hr> --}}
+
+{{!-- <ul>
   {{#each burgers}}
     {{#unless devoured}}
       {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
-</ul>
+</ul> --}}
 
-<ul>
+{{!-- <ul>
   {{#each burgers}}
     {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
     {{/if}}
   {{/each}}
-</ul>
+</ul> --}}
 
-<p>Enter a burger you want to eat. Click the "Submit" button</p>
-<form class="create-form">
-    <div class="form-group">
-        <label for="bu"></label>
-        <input type="text" id="bu" name="name">
-    </div>
+<div id='devouredBurgers'>
+    <h2>These were delicious: </h2>
+    <hr>
+    <ul>
+        {{#each burgers}} 
+            {{#if this.devoured}}
+            <li>
+                {{this.id}}.{{this.burger_name}}
+            </li>
+            {{/if}}
+        {{/each}}
+    </ul>
+</div>
 
-    <button type="submit">Submit</button>
-</form>
+<div id='addABurger'>
+    <p>Enter a burger you want to eat.</p>
+    <p>Click the "Submit" button</p>
+    <form class="create-form" method="POST">
+        <div class="form-group">
+            <label for="bu">Burger Name:</label>
+            <input type="text" id="bu" name="burger_name">
+        </div>
+
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+</div>
+
+
