--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/eatDaBurger/public/assets/css/burger_style.css" type="text/css" />
-		<title>Eat Da Burger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/eatDaBurger/public/assets/js/burgers.js"></script>
-	</head>
+
+    {{!-- CSS file --}}
+    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+
+    {{!-- Bootstraplibrary --}}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+	
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:100" rel="stylesheet">
     
-	<body>
-		{{{ body }}}
-	</body>
+    
+	
+    <title>Eat Da Burger!</title>
+	{{!-- <script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/eatDaBurger/public/assets/js/burgers.js"></script> --}}
+</head>
+
+<body>
+	{{{ body }}}
+</body>
 </html>
