--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,13 +9,11 @@
     {{!-- Bootstraplibrary --}}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 	
-    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:100" rel="stylesheet">
+    {{!-- Google font --}}
+    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Pacifico" rel="stylesheet">
     
-    
-	
     <title>Eat Da Burger!</title>
-	{{!-- <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/eatDaBurger/public/assets/js/burgers.js"></script> --}}
+	
 </head>
 
 <body>
